# Coursedesignalgorithm_datastructure

./: .gitignore  CMakeLists.txt  Makefile  README.md  USAGE.md  run.sh
resources/backgrounds/: search_and_download.py
resources/test_files/: example.c  header.h  header1.c  header2.c  header2.h
src/: main.c
src/huffman/: huffman.c  huffman.h
src/recursion/: recursion.c  recursion.h
src/sorting/: sorting.c  sorting.h
src/union/: union.c  union.h
src/utils/: error_handler.c  error_handler.h
